cmake_minimum_required(VERSION 3.20)
project("NodeGame" VERSION 0.1)

SET(CMAKE_BUILD_TYPE Debug)
SET(OUTPUT_ELF
    "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out"
)
SET(SRC_FILES 
${CMAKE_SOURCE_DIR}/src/main.cpp
${CMAKE_SOURCE_DIR}/src/lib/test.cpp
)

INCLUDE_DIRECTORIES(src/include)

ADD_COMPILE_OPTIONS(-g -Wall)


SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE} )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRC_FILES})